--- a/Android/app/src/main/res/layout/activity_feedback_edit.xml
+++ b/Android/app/src/main/res/layout/activity_feedback_edit.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.antonborries.feedbacker.view.FeedbackEditActivity">
+    tools:context="de.hhu.cs.feedbackr.view.FeedbackEditActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
