--- a/Android/app/src/main/res/layout/fragment_feedback_send.xml
+++ b/Android/app/src/main/res/layout/fragment_feedback_send.xml
@@ -3,7 +3,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context="com.antonborries.feedbacker.view.FeedbackSendFragment">
+                                             tools:context="de.hhu.cs.feedbackr.view.FeedbackSendFragment">
 
 
     <android.support.v7.widget.AppCompatButton
