--- a/Android/app/src/main/res/layout/fragment_feedback_edit.xml
+++ b/Android/app/src/main/res/layout/fragment_feedback_edit.xml
@@ -137,10 +137,10 @@
                 android:id="@+id/editTextMoreInfo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/transparent"
                 android:ems="10"
                 android:gravity="top"
                 android:hint="@string/feedback_explain"
@@ -150,8 +150,7 @@
                 android:text="@={feedback.details}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_category"/>
+                app:layout_constraintTop_toBottomOf="@+id/spinner_category" />
 
         </android.support.constraint.ConstraintLayout>
 
