--- a/Android/app/src/main/res/layout/dialog_feedback.xml
+++ b/Android/app/src/main/res/layout/dialog_feedback.xml
@@ -5,6 +5,8 @@
 
     <data>
         <import type="android.view.View"/>
+        <import type="de.hhu.cs.feedbackr.model.CategoryConverter"/>
+        <import type="android.support.v4.content.ContextCompat"/>
         <variable
             name="feedback"
             type="de.hhu.cs.feedbackr.model.Feedback"/>
@@ -81,14 +83,13 @@
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
             android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
-            android:rotation="@{feedback.positive ? 0 : 180}"
             android:scaleType="fitXY"
             android:tint="@{feedback.positive ? @color/green : @color/red}"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewTime"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_thumb_up_white_24dp"
+            android:src="@{ContextCompat.getDrawable(context,CategoryConverter.tagToDrawable(feedback.category))}"
             tools:tint="@color/green"/>
 
         <TextView
