--- a/Android/app/src/main/res/layout/fragment_feedback_edit.xml
+++ b/Android/app/src/main/res/layout/fragment_feedback_edit.xml
@@ -103,17 +103,16 @@
                 android:id="@+id/switchPublish"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginStart="16dp"
-                android:checked="@={feedback.published}"
+                android:layout_marginTop="16dp"
+                android:checked="true"
                 android:text="@string/feedback_publish"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewTime"
-                app:layout_constraintHorizontal_bias="0.0"/>
+                tools:checked="true" />
 
             <!-- TODO: Add hints what switches do-->
 
