--- a/Android/app/src/main/res/layout/fragment_map.xml
+++ b/Android/app/src/main/res/layout/fragment_map.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,31 +10,64 @@
         android:id="@+id/map_fab_personal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="-5dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:tint="@color/colorAccent"
         android:visibility="invisible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_profile_black_24dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map_fab_positive"
+        app:srcCompat="@drawable/ic_profile_white_24dp"
+        android:layout_marginLeft="8dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_fab_public"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:tint="@color/colorAccent"
         android:visibility="invisible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
-        app:layout_constraintLeft_toRightOf="@+id/map_fab_personal"
+        app:layout_constraintStart_toEndOf="@+id/map_fab_personal"
+        app:layout_constraintTop_toBottomOf="@+id/map_fab_negative"
+        app:srcCompat="@drawable/ic_public_disabled_black_24dp"
+        android:layout_marginLeft="8dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_fab_positive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:tint="@color/colorAccent"
+        android:visibility="invisible"
+        app:backgroundTint="@android:color/white"
+        app:fabSize="mini"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_public_disabled_black_24dp"/>
+        app:srcCompat="@drawable/ic_thumb_up_white_24dp"
+        android:layout_marginLeft="8dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_fab_negative"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:tint="@color/colorAccent"
+        android:visibility="invisible"
+        app:backgroundTint="@android:color/white"
+        app:fabSize="mini"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/map_fab_positive"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_thumb_down_white_24dp" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_map"
@@ -41,10 +75,10 @@
         android:layout_height="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"/>
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
