--- a/Android/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/Android/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/bottom_profile"
-        android:icon="@drawable/ic_profile_black_24dp"
-        android:title="@string/profile"
+        android:icon="@drawable/ic_list_black_24dp"
+        android:title="@string/feedbacks"
         app:showAsAction="ifRoom"/>
 </menu>
