--- a/Android/app/src/main/res/menu/menu_edit.xml
+++ b/Android/app/src/main/res/menu/menu_edit.xml
@@ -3,13 +3,13 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_edit_switch"
-        android:icon="@drawable/ic_thumbs_up_down_black_24dp"
+        android:icon="@drawable/ic_thumbs_up_down_white_24dp"
         android:title="@string/switch_kind"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_edit_delete"
-        android:icon="@drawable/ic_delete_black_24dp"
+        android:icon="@drawable/ic_delete_white_24dp"
         android:title="@string/delete"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 </menu>
