firebase restructured, map view, feedbacks view

--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">#1976D2</color>
     <color name="colorPrimaryDark">#1976D2</color>
 
+    <color name="mapCircleFill">#3c1976d2</color>
+    <color name="mapCircleStroke">#1976d2</color>
+
     <color name="colorBackground">#FFFFFF</color>
 
     <color name="colorPrimaryDetail">#FFFFFF</color>
