--- a/Android/app/src/main/res/layout/fragment_map.xml
+++ b/Android/app/src/main/res/layout/fragment_map.xml
@@ -10,47 +10,49 @@
         android:id="@+id/map_fab_personal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:clickable="true"
         android:tint="@color/colorAccent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map_fab_positive"
-        app:srcCompat="@drawable/ic_profile_white_24dp"
-        android:layout_marginLeft="8dp" />
+        app:srcCompat="@drawable/ic_profile_white_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_fab_public"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:clickable="true"
         android:tint="@color/colorAccent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
         app:layout_constraintStart_toEndOf="@+id/map_fab_personal"
         app:layout_constraintTop_toBottomOf="@+id/map_fab_negative"
-        app:srcCompat="@drawable/ic_public_disabled_black_24dp"
-        android:layout_marginLeft="8dp" />
+        app:srcCompat="@drawable/ic_public_black_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_fab_positive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:tint="@color/colorAccent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_thumb_up_white_24dp"
-        android:layout_marginLeft="8dp" />
+        app:srcCompat="@drawable/ic_thumb_up_white_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_fab_negative"
@@ -61,13 +63,32 @@
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:tint="@color/colorAccent"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:backgroundTint="@android:color/white"
         app:fabSize="mini"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toEndOf="@+id/map_fab_positive"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_thumb_down_white_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:tint="@color/colorAccent"
+        android:visibility="visible"
+        app:backgroundTint="@android:color/white"
+        app:fabSize="mini"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_center_black_24dp" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_map"
