--- a/Android/app/src/main/res/layout/dialog_feedback.xml
+++ b/Android/app/src/main/res/layout/dialog_feedback.xml
@@ -21,17 +21,48 @@
         tools:layout_editor_absoluteY="0dp">
 
         <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+            app:srcCompat="@drawable/ic_dark_black_24dp" />
+
+        <ImageView
+            android:id="@+id/feedback_photo"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:adjustViewBounds="false"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textViewTime"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
+
+        <ImageView
             android:id="@+id/imageViewCalendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:contentDescription="@string/content_description_calendar"
             android:tint="@color/colorAccent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_calendar_black_24dp"/>
+            app:layout_constraintStart_toEndOf="@+id/imageViewCat"
+            app:layout_constraintTop_toTopOf="@+id/imageViewCat"
+            app:srcCompat="@drawable/ic_calendar_black_24dp" />
 
         <TextView
             android:id="@+id/textViewCalendar"
@@ -51,13 +82,14 @@
             android:id="@+id/imageViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:contentDescription="@string/content_description_time"
             android:tint="@color/colorAccent"
-            app:layout_constraintLeft_toLeftOf="@+id/imageViewCalendar"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewCalendar"
-            app:srcCompat="@drawable/ic_time_black_24dp"
-            />
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
+            app:layout_constraintStart_toEndOf="@+id/textViewCalendar"
+            app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
+            app:srcCompat="@drawable/ic_time_black_24dp" />
 
         <TextView
             android:id="@+id/textViewTime"
@@ -65,51 +97,60 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@{feedback.time}"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewTime"
             app:layout_constraintLeft_toRightOf="@+id/imageViewTime"
             app:layout_constraintTop_toTopOf="@+id/imageViewTime"
-            tools:text="11:05"/>
+            tools:text="11:05" />
 
         <ImageView
             android:id="@+id/imageViewCat"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="true"
             android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
-            android:scaleType="fitXY"
-            android:tint="@{feedback.positive ? @color/green : @color/red}"
-            app:layout_constraintBottom_toBottomOf="@+id/imageViewTime"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
-            app:layout_constraintVertical_bias="0.0"
+            android:scaleType="fitCenter"
             android:src="@{ContextCompat.getDrawable(context,CategoryConverter.tagToDrawable(feedback.category))}"
-            tools:tint="@color/green"/>
+            android:tint="@{feedback.positive ? @color/green : @color/red}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_thumb_up_white_24dp"
+            tools:tint="@color/green" />
 
         <TextView
             android:id="@+id/textViewDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:text="@{feedback.details}"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:text="Just some text without Typos as Lorem Text had a bunch of it."
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewTime"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/imageView6"
+            tools:text="Just some text without Typos as Lorem Text had a bunch of it." />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="@={feedback.rating}"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewCat"
+            app:layout_constraintStart_toEndOf="@+id/imageViewCat" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
