--- a/Android/app/src/main/res/layout/dialog_feedback.xml
+++ b/Android/app/src/main/res/layout/dialog_feedback.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
-        <import type="de.hhu.cs.feedbackr.model.CategoryConverter"/>
-        <import type="android.support.v4.content.ContextCompat"/>
+        <import type="de.hhu.cs.feedbackr.model.CategoryConverter" />
+        <import type="android.support.v4.content.ContextCompat" />
         <variable
             name="feedback"
-            type="de.hhu.cs.feedbackr.model.Feedback"/>
-
+            type="de.hhu.cs.feedbackr.model.Feedback" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -18,10 +16,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        >
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/image_test"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
@@ -29,6 +28,10 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:cropToPadding="false"
+            android:scaleType="fitCenter"
+            android:scaleX="1"
+            android:scaleY="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ratingBar"
@@ -44,12 +47,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="false"
+            android:onClick="showImage"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewTime"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageViewCalendar"
@@ -76,7 +79,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
             app:layout_constraintLeft_toRightOf="@+id/imageViewCalendar"
             app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
-            tools:text="21.09.2016"/>
+            tools:text="21.09.2016" />
 
         <ImageView
             android:id="@+id/imageViewTime"
@@ -136,7 +139,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6"
+            app:layout_constraintTop_toBottomOf="@+id/image_test"
             tools:text="Just some text without Typos as Lorem Text had a bunch of it." />
 
         <RatingBar
