--- a/Android/app/src/main/res/layout/dialog_feedback.xml
+++ b/Android/app/src/main/res/layout/dialog_feedback.xml
@@ -12,30 +12,12 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/wrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        >
-
-        <ImageView
-            android:id="@+id/image_test"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:cropToPadding="false"
-            android:scaleType="fitCenter"
-            android:scaleX="1"
-            android:scaleY="1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-            app:srcCompat="@drawable/ic_dark_black_24dp" />
+        tools:layout_editor_absoluteY="0dp">
 
         <ImageView
             android:id="@+id/feedback_photo"
@@ -47,7 +29,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:adjustViewBounds="false"
-            android:onClick="showImage"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -129,17 +110,15 @@
             android:id="@+id/textViewDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp"
             android:text="@{feedback.details}"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_test"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
             tools:text="Just some text without Typos as Lorem Text had a bunch of it." />
 
         <RatingBar
@@ -154,6 +133,23 @@
             android:rating="@={feedback.rating}"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewCat"
             app:layout_constraintStart_toEndOf="@+id/imageViewCat" />
+
+        <ImageView
+            android:id="@+id/image_zoom"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_dark_black_24dp" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
