--- a/Android/app/src/main/res/layout/fragment_map.xml
+++ b/Android/app/src/main/res/layout/fragment_map.xml
@@ -173,6 +173,23 @@
                     app:layout_constraintStart_toEndOf="@+id/textViewTime"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <ProgressBar
+                    android:id="@+id/load_img"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/feedback_photo"
+                    app:layout_constraintEnd_toEndOf="@+id/feedback_photo"
+                    app:layout_constraintStart_toStartOf="@+id/feedback_photo"
+                    app:layout_constraintTop_toTopOf="@+id/feedback_photo"
+                    tools:visibility="invisible" />
+
                 <ImageView
                     android:id="@+id/imageViewCalendar"
                     android:layout_width="wrap_content"
