--- a/Android/app/src/main/res/layout/dialog_switch.xml
+++ b/Android/app/src/main/res/layout/dialog_switch.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="feedback"
-            type="de.hhu.cs.feedbackr.model.Feedback"/>
+            type="de.hhu.cs.feedbackr.model.Feedback" />
 
     </data>
 
@@ -29,16 +29,17 @@
             android:text="@{String.format(@string/switch_feedback, feedback.positive ? @string/negative : @string/positive)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imgFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
-            android:layout_marginRight="32dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
             android:minHeight="48dp"
             android:minWidth="48dp"
             android:rotation="@{feedback.positive ? 0 : 180}"
@@ -49,8 +50,7 @@
             app:layout_constraintTop_toTopOf="@+id/imgArrow"
             app:srcCompat="@drawable/ic_thumb_up_white_24dp"
             tools:rotation="180"
-            android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
-            tools:tint="@color/red"/>
+            tools:tint="@color/red" />
 
         <ImageView
             android:id="@+id/imgTo"
@@ -60,18 +60,18 @@
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
             android:minHeight="48dp"
             android:minWidth="48dp"
             android:rotation="@{feedback.positive ? 180 : 0}"
             android:scaleType="centerCrop"
             android:tint="@{feedback.positive ? @color/red : @color/green}"
-            android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
             app:layout_constraintBottom_toBottomOf="@+id/imgArrow"
             app:layout_constraintLeft_toRightOf="@+id/imgArrow"
             app:layout_constraintTop_toTopOf="@+id/imgArrow"
             app:srcCompat="@drawable/ic_thumb_up_white_24dp"
             tools:rotation="0"
-            tools:tint="@color/green"/>
+            tools:tint="@color/green" />
 
         <ImageView
             android:id="@+id/imgArrow"
@@ -80,14 +80,14 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/switch_word"
             android:minHeight="48dp"
             android:minWidth="48dp"
             android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textSwitch"
-            app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
-            android:contentDescription="@string/switch_word"/>
+            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />
 
         <TextView
             android:id="@+id/textWarning"
@@ -101,6 +101,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgArrow"/>
+            app:layout_constraintTop_toBottomOf="@+id/imgArrow" />
     </android.support.constraint.ConstraintLayout>
 </layout>
