--- a/Android/app/src/main/res/layout/fragment_feedback_send.xml
+++ b/Android/app/src/main/res/layout/fragment_feedback_send.xml
@@ -22,9 +22,11 @@
             android:layout_marginBottom="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/feedback"
             android:cropToPadding="false"
             android:src="@drawable/posneg"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +36,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
-
     </FrameLayout>
 
     <ImageView
@@ -44,6 +45,8 @@
         android:layout_marginBottom="90dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:contentDescription="@string/negative"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="@+id/frameLayout"
         app:layout_constraintHorizontal_bias="0.45"
@@ -59,6 +62,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="90dp"
+        android:contentDescription="@string/positive"
+        android:tint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/frameLayout"
         app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintLeft_toLeftOf="parent"
