--- a/Android/app/src/main/res/layout/fragment_location_error.xml
+++ b/Android/app/src/main/res/layout/fragment_location_error.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:orientation="vertical">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -20,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_icon_exclamation"/>
+        app:srcCompat="@drawable/ic_icon_exclamation" />
 
     <TextView
         android:id="@+id/textView3"
@@ -32,10 +31,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="@string/locationError"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/iVRefresh"
@@ -54,5 +53,5 @@
         app:layout_constraintLeft_toLeftOf="@id/textView3"
         app:layout_constraintRight_toRightOf="@id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/ic_refresh_black_24dp"/>
+        app:srcCompat="@drawable/ic_refresh_black_24dp" />
 </android.support.constraint.ConstraintLayout>
