--- a/Android/app/src/main/res/layout/fragment_map.xml
+++ b/Android/app/src/main/res/layout/fragment_map.xml
@@ -214,8 +214,7 @@
                     android:text="@{feedback.day}"
                     app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
                     app:layout_constraintLeft_toRightOf="@+id/imageViewCalendar"
-                    app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
-                    tools:text="21.09.2016" />
+                    app:layout_constraintTop_toTopOf="@+id/imageViewCalendar" />
 
                 <ImageView
                     android:id="@+id/imageViewTime"
@@ -236,12 +235,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:text="@{feedback.time}"
                     app:layout_constraintBottom_toBottomOf="@+id/imageViewTime"
                     app:layout_constraintLeft_toRightOf="@+id/imageViewTime"
-                    app:layout_constraintTop_toTopOf="@+id/imageViewTime"
-                    tools:text="11:05" />
+                    app:layout_constraintTop_toTopOf="@+id/imageViewTime" />
 
                 <ImageView
                     android:id="@+id/imageViewCat"
